# PolynomialSolverGUI

./: README.md
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: logic.rs  main.rs
web/: Cargo.toml
web/src/: lib.rs  logic.rs
web/src-html/: index.html  main.js
