[package]
name = "polynomial-solver"
version = "0.0.0"
description = "Polynomial Solver"
authors = ["ANicon111"]
license = "GPL3"
repository = ""
edition = "2021"

[build-dependencies]

[dependencies]
wasm-bindgen ={version= "0.2",features = ["serde-serialize"]}
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"

[lib]
crate-type = ["cdylib"]

